block scroll when burger opened, fix paddings on mobile, add scrool to created elem

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -18,7 +18,6 @@
 html,
 body {
 	width: 100%;
-	overflow-x: hidden;
 }
 
 body {
@@ -49,4 +48,8 @@ a {
 .fade-enter,
 .fade-leave-to {
 	opacity: 0;
+}
+
+.no-scroll {
+	overflow: hidden;
 }
